[package]
name = "tofuwabohu"
version = "0.1.0"
authors = ["Oliver Scherer <github@oli-obk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex2d = {version = "1.1.0", default-features = false}
# FIXME: remove audio feature once macroquad compiles without it
macroquad = {version = "0.3", default-features = false, features = ["audio"]}

[patch.crates-io]
miniquad = { git = "https://github.com/not-fl3/miniquad", rev = "108854ddf14720ecd170cd19afcfbe69cbf62278" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
quad-storage-sys = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "4.0"
copy_dir = "0.1.2"

[profile.release]
opt-level = "s"
lto = true
